[pcore] style: Wrong kotlin styling in a java patch